2003-06-12  Serge Vakulenko <vak@cronyx.ru>

	* input-gf.[ch]: New files.

	* output-ugs.[ch]: New files.

2003-06-18  Masatake YAMATO  <yamato@redhat.com>

	* output-*.[ch] (output_*_writer): added user_data
	as an argument.
	
	* output-pstoedit.c: Rewrite.

	* output.c: Rewrite(copied from input.c).

	* autotrace.c (at_splines_write): don't call
	pstoedit function directly here.
	(autotrace_init): call at_output_init.

	* autotrace.h(at_spline_writer): New data type.
	(at_output_write_func): moved to output.h.
	(at_splines_write): use at_splines_write instead
	of at_output_write_func.

	* input-magick.c (input_magick_reader): moved from 
	module.c.

	* input-magick.[ch] (install_input_magick_readers): New
	function.
	(input_magick_reader): make static.

	* input.c: include input.h.

	* main.c: use new type at_spline_writer.
	(output_list_formats): Added const modifiers to list,
	tmp, suffix and descr.

	* module.c: image magick related functions are moved to
	input-magick.c.
	(install_output_writers): new function.

	* private.h (struct _at_spline_writer): New datum type.
	(at_output_init): New function.

2003-06-15  Masatake YAMATO  <yamato@redhat.com>

	* main.c (read_command_line): added new parameter, input_opts.
	(main): passed input_opts to read_command_line.
	Don't set input_opts->background_color here.
	(read_command_line): Set input_opts->background_color here.
	(read_command_line): Set input_opts->charcode here.

2003-06-12  Serge Vakulenko <vak@cronyx.ru>

	(Logged by Masatake.)

	* autotrace.h (_at_fitting_opts_type): added charcode.

	* autotrace.h (struct _at_input_opts_type): added charcode.

	* fit.c (new_fitting_opts): Initialize charcode.
	(fit_one_spline): Fixed two bugs, which caused unexpected aborts with
	diagnostics "zero determinant of C0*C1"
	and "assertion error in line 1276 of fit.c".

	* main.c (read_command_line::long_options): Added 
	charcode as an option.

	* module.c: Added gf input.

	* output.c: included output-ugs.h.