@@ -1,16 +1,20 @@
 *.diff
+*.eps
+*.gz
 *.la
 *.lo
+*.log
 *.new
 *.orig
+*.out
 *.patch
 *.png
+*.ps
 *.rej
-*.gz
+*.zip
 .deps
 .gdbinit
 .libs
-*.zip
 Makefile
 Makefile.am.norpm
 Makefile.in
@@ -35,6 +39,7 @@ config.h
 config.h.in
 config.log
 config.status
+config.sub
 configure
 configure.scan
 fig
@@ -44,6 +49,8 @@ image
 inline.h
 install-sh
 libtool
+ltmain.sh
+m4
 macos.x
 macros
 missing
@@ -54,8 +61,3 @@ port
 release
 rpm.log
 stamp-*
-*.eps
-*.log
-*.out
-*.ps
-m4
