@@ -41,7 +41,7 @@ AM_MAINTAINER_MODE
 AM_CONFIG_HEADER(config.h)
 
 AC_PROG_CPP
-AC_PROG_RANLIB
+dnl AC_PROG_RANLIB
 dnl AC_CANONICAL_HOST
 dnl AC_ARG_PROGRAM
 AM_SANITY_CHECK
